Markup/CSS for Static Header elements
Completed markup and CSS for static instances of header elements. Not
including Subnav at this point.

--- a/assets/less/global/style.less
+++ b/assets/less/global/style.less
@@ -1,1 +1,18 @@
+/*!
+ * Vanns.com @VERSION
+ *
+ * Copyright 2012 Vann's, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the aloha in the world by @johngilesyoder and @oneGregWiley.
+ * Date: @DATE
+ */
+
+
+// Bootstrap UI Framework
 @import "lib/bootstrap.less";
+
+// Global Header / Footer
+@import "header.less";
+@import "footer.less";
