--- a/assets/less/global/lib/scaffolding.less
+++ b/assets/less/global/lib/scaffolding.less
@@ -13,7 +13,14 @@ body {
   font-size: @baseFontSize;
   line-height: @baseLineHeight;
   color: @gray;
-  background-color: @white;
+  background-color: @backgroundColor;
+}
+
+.page {
+	background-image: url(../../img/page-bg-noise.png);
+	background-repeat: repeat-x;
+	margin-top: -40px;
+	padding-top: 40px;
 }
 
 // Container (centered, fixed-width layouts)
