--- a/assets/less/global/lib/variables.less
+++ b/assets/less/global/lib/variables.less
@@ -7,6 +7,9 @@
 // GLOBAL VALUES
 // --------------------------------------------------
 
+// Background
+@backgroundColor:       #f2f2f2;
+
 // Links
 @linkColor:             #086daf;
 @linkColorHover:        darken(@linkColor, 15);
@@ -68,4 +71,5 @@
 @navbarBackground:                #222;
 @navbarBackgroundHighlight:       #333;
 
-
+// Topbar
+@topBarColor:       #d9d9d9;
