--- a/assets/less/global/lib/bootstrap.less
+++ b/assets/less/global/lib/bootstrap.less
@@ -59,7 +59,7 @@
 @import "utilities.less"; // Has to be last to override when necessary
 
 // Responsive
-@import "responsive.less";
+//@import "responsive.less";
 
 // Patterns
 @import "patterns.less";
