--- a/assets/less/global/lib/navbar.less
+++ b/assets/less/global/lib/navbar.less
@@ -179,7 +179,7 @@
 }
 
 // Secondary (floated right) nav in topbar
-.navbar .nav.pull-right {
+.topbar .nav.pull-right {
   margin-left: 10px;
   margin-right: 0;
 }
@@ -238,7 +238,7 @@
 }
 
 // Right aligned menus need alt position
-.navbar .nav.pull-right .dropdown-menu {
+.topbar .pull-right .dropdown-menu {
   right: 0;
   &:before {
     left: auto;
