--- a/assets/less/global/style.less
+++ b/assets/less/global/style.less
@@ -16,3 +16,9 @@
 // Global Header / Footer
 @import "header.less";
 @import "footer.less";
+
+// Marketing CSS
+@import "marketing.less";
+
+// Fonts CSS
+@import "fonts.less";
