--- a/assets/less/global/lib/reset.less
+++ b/assets/less/global/lib/reset.less
@@ -97,7 +97,7 @@ sub {
 // -------------------------
 // Source: http://github.com/necolas/normalize.css
 img {
-  max-width: 100%;
+  //max-width: 100%;
   height: auto;
   border: 0;
   -ms-interpolation-mode: bicubic;
