Few more changes to homepage / marketing zone CSS

--- a/assets/css/areas/home.css
+++ b/assets/css/areas/home.css
@@ -1,60 +1,5 @@
-.home .hero {
-  margin-bottom: 30px;
-}
-.trust {
-  font-family: 'Clarendon';
-  text-transform: uppercase;
-  height: 35px;
-}
-.trust h3 {
-  font-weight: normal;
-  font-size: 16px;
-  color: #ffffff;
-  background-image: url(../../img/home/trust-gradient.png);
-  float: left;
-  height: 35px;
-  line-height: 35px;
-  position: relative;
-  padding: 0 18px 0 20px;
-  -webkit-border-top-left-radius: 3px;
-  -moz-border-radius-topleft: 3px;
-  border-top-left-radius: 3px;
-  -webkit-border-top-right-radius: 0;
-  -moz-border-radius-topright: 0;
-  border-top-right-radius: 0;
-  -webkit-border-bottom-right-radius: 0;
-  -moz-border-radius-bottomright: 0;
-  border-bottom-right-radius: 0;
-  -webkit-border-bottom-left-radius: 3px;
-  -moz-border-radius-bottomleft: 3px;
-  border-bottom-left-radius: 3px;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-}
-.trust h3:after {
-  content: url(../../img/home/trust-carat.png);
-  position: absolute;
-  right: -11px;
-}
-.trust ul {
-  color: #666;
-  float: left;
-  height: 34px;
-  line-height: 35px;
-  margin-left: 40px;
-  margin-bottom: 0;
-  padding-top: 1px;
-}
-.trust ul li {
-  display: inline;
-  margin-right: 35px;
-}
-.trust ul li:last-child {
-  margin-right: 0;
-}
-@media only screen and (max-width: 1340px) {
-  .widget {
-    display: none;
-  }
-}
+
+.home .hero{margin-bottom:30px;}
+.trust{font-family:'Clarendon';text-transform:uppercase;height:35px;margin-bottom:27px;}.trust h3{font-weight:normal;font-size:16px;color:#ffffff;background-image:url(../../img/home/trust-gradient.png);float:left;height:35px;line-height:35px;position:relative;padding:0 18px 0 20px;-webkit-border-top-left-radius:3px;-moz-border-radius-topleft:3px;border-top-left-radius:3px;-webkit-border-top-right-radius:0;-moz-border-radius-topright:0;border-top-right-radius:0;-webkit-border-bottom-right-radius:0;-moz-border-radius-bottomright:0;border-bottom-right-radius:0;-webkit-border-bottom-left-radius:3px;-moz-border-radius-bottomleft:3px;border-bottom-left-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;}.trust h3:after{content:url(../../img/home/trust-carat.png);position:absolute;right:-11px;}
+.trust ul{color:#666;float:left;height:34px;line-height:35px;margin-left:40px;margin-bottom:0;padding-top:1px;}.trust ul li{display:inline;margin-right:35px;}.trust ul li:last-child{margin-right:0;}
+@media only screen and (max-width:1340px){.widget{display:none;}}
