--- a/assets/less/areas/home.less
+++ b/assets/less/areas/home.less
@@ -20,6 +20,7 @@
 	font-family: 'Clarendon';
 	text-transform: uppercase;
 	height: 35px;
+	margin-bottom: 27px;
 	// Black title
 	h3 {
 		font-weight: normal;
