--- a/assets/less/global/lib/patterns.less
+++ b/assets/less/global/lib/patterns.less
@@ -29,21 +29,26 @@ footer {
   border-top: 1px solid #eee;
 }
 
-
-
-// Section Headers
-.shelf h5 {
-	text-transform: uppercase;
-	color: #999;
-	font-size: 10px;
-	width: 100%;
-	display: block;
-	background-image: url(../../img/section-div.png);
-	background-repeat: repeat-x;
-	background-position-y: 50%;
-	text-shadow: 0 1px 0 @white;
-	span {
-		background: @backgroundColor;
-		padding-right: 15px;
+.shelf {
+	margin-bottom: 20px;
+	div:nth-last-child(1) {
+		margin-bottom: 0;
+	}
+	// Section Headers
+	h5 {
+		text-transform: uppercase;
+		color: #999;
+		font-size: 10px;
+		width: 100%;
+		display: block;
+		background-image: url(../../img/section-div.png);
+		background-repeat: repeat-x;
+		background-position-y: 50%;
+		text-shadow: 0 1px 0 @white;
+		margin-bottom: 17px;
+		span {
+			background: @backgroundColor;
+			padding-right: 15px;
+		}
 	}
 }
