Footer Build / More Homepage Build / More Cowbell
Completely built out global footer, homepage almost complete at this
point, updated zone CSS.

--- a/assets/less/global/lib/variables.less
+++ b/assets/less/global/lib/variables.less
@@ -9,6 +9,8 @@
 
 // Background
 @backgroundColor:       #f2f2f2;
+@backgroundFont:		#8c8c8c;
+@borderColor:           #ccc;
 
 // Links
 @linkColor:             #086daf;
@@ -45,6 +47,7 @@
 @baseFontSize:          13px;
 @baseFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
 @baseLineHeight:        18px;
+@serifStack:			"Clarendon", Georgia, serif;
 
 // Buttons
 @primaryButtonColor:    @blue;
@@ -72,4 +75,4 @@
 @navbarBackgroundHighlight:       #333;
 
 // Topbar
-@topBarColor:       #d9d9d9;
+@topbarColor:       #d9d9d9;
