--- a/assets/less/global/marketing.less
+++ b/assets/less/global/marketing.less
@@ -9,11 +9,14 @@
 .zone {
 	background: @white;
 	.border-radius(3px);
-	&.shadow {
-		.box-shadow(0 0 5px rgba(0,0,0,0.3);
-	}
 }
 
-// Help area
+// SHOPPING WIDGET
 // -------------------------
-	
+
+// Widget
+@media only screen and (max-width: 1340px) {
+    .widget {
+    	display: none;
+    }
+}	
