--- a/assets/less/areas/home.less
+++ b/assets/less/areas/home.less
@@ -13,11 +13,12 @@
 // Hero
 .home .hero {
 	margin-bottom: 30px;
+	height: 535px;
 }
 
 // Trust points
 .trust {
-	font-family: 'Clarendon';
+	font-family: @serifStack;
 	text-transform: uppercase;
 	height: 35px;
 	margin-bottom: 27px;
@@ -58,11 +59,84 @@
 	}
 }
 
+// SHOP SECTION
+// --------------------------------------------------
 
+// Deal of the Day Widget
+.dod {
+	height: 200px;
+	background: @white;
+	.border-radius(3px);
+}
 
+// Secondary Zones
+.zone.secondary {
+	height: 200px;
+}
 
-@media only screen and (max-width: 1340px) {
-    .widget {
-    	display: none;
-    }
+// AUTHORIZED BRANDS SECTION
+// --------------------------------------------------
+
+.authorized-brands {
+	margin-bottom: 30px;
+}
+
+// Search Brands
+#search-brands {
+	padding: 11px 10px 9px;
+	width: 278px;
+	height: 30px;
+	.border-radius(3px);
+	border: 1px solid @borderColor;
+	position: relative;
+	margin-bottom: 10px;
+	input {
+		width: 268px;
+		line-height: 0;
+		&::-webkit-input-placeholder {
+  			color: #b2b2b2;
+  			font-style: italic;
+  		}
+	}
+	button {
+		position: absolute;
+		right: 20px;
+		top: 17px;
+		background-image: url(../../img/small-search-btn.png);
+		text-indent: -9999px;
+		width: 17px;
+		height: 17px;
+		background-color: transparent;
+	}
+}
+
+// Featured Brands
+.featured-brands {
+	height: 50px;
+	background: #f9f9f9;
+	border: 1px solid @topbarColor;
+	.border-radius(3px);
+	width: 618px;
+}
+
+// SEO BLOCK
+// --------------------------------------------------
+
+.about-vdc {
+	color: #b3b3b3;
+	//background-color: #eaeaea;
+	//.border-radius(3px);
+	//padding: 10px 20px;
+	//border-bottom: 1px solid @white;
+	//.box-shadow(inset 0 1px 4px rgba(0,0,0,0.1);
+	margin-bottom: 40px;
+	font-size: 12px;
+	i {
+		background-image: url(../../img/seo-info-icon.png);
+		width: 26px;
+		height: 27px;
+		float: left;
+		margin-right: 20px;
+		margin-top: 4px;
+	}
 }
