--- a/assets/less/global/header.less
+++ b/assets/less/global/header.less
@@ -11,11 +11,11 @@ header {
 
 .topbar {
 	background-image: url(../../img/topbar-bg.png);
-	color: @topBarColor;
+	color: @topbarColor;
 	height: 30px;
 	// Topbar link color
 	div > ul > li > a {
-		color: @topBarColor;
+		color: @topbarColor;
 		text-shadow: 0 1px 0 #000;
 		&:hover {
 			color: @white;
