--- a/assets/less/global/lib/patterns.less
+++ b/assets/less/global/lib/patterns.less
@@ -23,11 +23,7 @@
     line-height: @baseLineHeight * 1.5;
   }
 }
-footer {
-  padding-top: @baseLineHeight - 1;
-  margin-top: @baseLineHeight - 1;
-  border-top: 1px solid #eee;
-}
+
 
 .shelf {
 	margin-bottom: 20px;
@@ -49,6 +45,13 @@ footer {
 		span {
 			background: @backgroundColor;
 			padding-right: 15px;
+			&.pull-right {
+				padding-right: 0;
+				padding-left: 15px;
+				font-weight: normal;
+				text-transform: none;
+				font-size: 12px;
+			}
 		}
 	}
 }
