Added inner fade script to plugins.js
Header Trust Poits now functional.

--- a/assets/less/global/header.less
+++ b/assets/less/global/header.less
@@ -220,9 +220,14 @@ header {
 	}
 	// Trust points
 	// -------------------------
-	.trust-header {
+	#trust-header {
 		text-align: center;
 		cursor: default;
+		overflow: hidden;
+		div {
+			width: 140px;
+			display: none;
+		}
 		h3 {
 			background: #808080;
 			color: @white;
