--- a/assets/less/global/lib/patterns.less
+++ b/assets/less/global/lib/patterns.less
@@ -27,11 +27,13 @@
 
 .shelf {
 	margin-bottom: 20px;
-	div:nth-last-child(1) {
+	/*
+div:nth-last-child(1) {
 		margin-bottom: 0;
 	}
+*/
 	// Section Headers
-	h5 {
+	.section-title {
 		text-transform: uppercase;
 		color: #999;
 		font-size: 10px;
