--- a/assets/less/areas/home.less
+++ b/assets/less/areas/home.less
@@ -144,7 +144,7 @@
 					float: right;
 					padding-right: 15px;
 					strong {
-						color: @green;
+						color: #40b84c;
 					}
 				}
 				strong {
@@ -155,17 +155,12 @@
 				}
 				.btn {
 					float: right;
-					//font-weight: 500;
 					margin-left: 15px;
 					text-align: left;
 					text-transform: none;
-					font-size: 13px;
-					text-shadow: none;
-					margin-top: 3px;
-				}
-				.primary {
-					font-size: 16px;
-					line-height: 16px;
+					margin-top: 2px;
+					font-size: 18px;
+					line-height: 18px;
 				}
 			}
 		}
