--- a/assets/less/global/footer.less
+++ b/assets/less/global/footer.less
@@ -2,6 +2,28 @@
 // CSS for the global footer.
 // -----------------------------------------------------------------
 
+// SEO BLOCK
+// --------------------------------------------------
+
+.about-vdc {
+	color: #b3b3b3;
+	//background-color: #eaeaea;
+	//.border-radius(3px);
+	padding: 0 20px;
+	//border-bottom: 1px solid @white;
+	//.box-shadow(inset 0 1px 4px rgba(0,0,0,0.1);
+	margin-bottom: 40px;
+	font-size: 12px;
+	i {
+		background-image: url(../../img/seo-info-icon.png);
+		width: 26px;
+		height: 27px;
+		float: left;
+		margin-right: 20px;
+		margin-top: 4px;
+	}
+}
+
 footer {
 	color: @backgroundFont;
 	text-shadow: 0 1px 0 @white;
