--- a/assets/less/global/lib/type.less
+++ b/assets/less/global/lib/type.less
@@ -215,3 +215,10 @@ small {
 cite {
   font-style: normal;
 }
+
+// Inset
+
+.inset-text {
+	text-shadow: 0 1px 0 @white;
+	color: @backgroundFont;
+}
