--- a/assets/less/global/lib/variables.less
+++ b/assets/less/global/lib/variables.less
@@ -41,6 +41,7 @@
 @baseLineHeight:        18px;
 @textColor:             @grayDark;
 @serifStack:			"Clarendon", Georgia, serif;
+@heavyCondensed:		"NeueHeavyCondensed", "Helvetica Neue", sans-serif;
 
 // Buttons
 @primaryButtonBackground:    @linkColor;
