--- a/assets/less/global/fonts.less
+++ b/assets/less/global/fonts.less
@@ -8,11 +8,26 @@
 
 @font-face {
     font-family: 'Clarendon';
-    src: url('../../fonts/clarendon/clarendonltstd-webfont.eot');
-    src: url('../../fonts/clarendon/clarendonltstd-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/clarendon/clarendonltstd-webfont.woff') format('woff'),
-         url('../../fonts/clarendon/clarendonltstd-webfont.ttf') format('truetype'),
-         url('../../fonts/clarendon/clarendonltstd-webfont.svg#ClarendonLTStdRoman') format('svg');
+    src: url('../../fonts/Clarendon/Clarendon-webfont.eot');
+    src: url('../../fonts/Clarendon/Clarendon-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/Clarendon/Clarendon-webfont.woff') format('woff'),
+         url('../../fonts/Clarendon/Clarendon-webfont.ttf') format('truetype'),
+         url('../../fonts/Clarendon/Clarendon-webfont.svg#ClarendonLTStdRoman') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+// Helvetica Neue LT Std Heavy Condensed (bold condensed)
+// --------------------------------------------------
+
+@font-face {
+    font-family: 'NeueHeavyCondensed';
+    src: url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.eot');
+    src: url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.woff') format('woff'),
+         url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.ttf') format('truetype'),
+         url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.svg#boldish-webfont') format('sag');
     font-weight: normal;
     font-style: normal;
 }
