--- a/assets/less/global/fonts.less
+++ b/assets/less/global/fonts.less
@@ -17,17 +17,16 @@
     font-style: normal;
 }
 
-
-// Helvetica Neue LT Std Heavy Condensed (bold condensed)
+// Helvetica Neue LT Std Bold Condensed (bold condensed)
 // --------------------------------------------------
 
 @font-face {
-    font-family: 'NeueHeavyCondensed';
-    src: url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.eot');
-    src: url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.woff') format('woff'),
-         url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.ttf') format('truetype'),
-         url('../../fonts/NeueHeavyCondensed/NeueHeavyCondensed-webfont.svg#boldish-webfont') format('sag');
+    font-family: 'NeueBoldCondensed';
+    src: url('../../fonts/NeueBoldCondensed/NeueBoldCondensed-webfont.eot');
+    src: url('../../fonts/NeueBoldCondensed/NeueBoldCondensed-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/NeueBoldCondensed/NeueBoldCondensed-webfont.woff') format('woff'),
+         url('../../fonts/NeueBoldCondensed/NeueBoldCondensed-webfont.ttf') format('truetype'),
+         url('../../fonts/NeueBoldCondensed/NeueBoldCondensed-webfont.svg#boldish-webfont') format('sag');
     font-weight: normal;
     font-style: normal;
 }
