--- a/assets/less/global/header.less
+++ b/assets/less/global/header.less
@@ -10,7 +10,7 @@ header {
 // --------------------------------------------------
 
 .topbar {
-	background-image: url(../../img/topbar-bg.png);
+	background-image: url(../../img/topbar/topbar-bg.png);
 	color: @topbarColor;
 	height: 30px;
 	// Topbar link color
@@ -50,7 +50,7 @@ header {
 	i {
 		width: 20px;
 		height: 20px;
-		background-image: url(../../img/topbar-sprites.png);
+		background-image: url(../../img/topbar/topbar-sprites.png);
 		margin-top: -3px;
 		margin-right: 5px;
 	}
@@ -108,7 +108,7 @@ header {
 			// Cart QTY carat
 			&:before {
 				content: " ";
-				background-image: url(../../img/topbar-sprites.png);
+				background-image: url(../../img/topbar/topbar-sprites.png);
 				background-position: 0 0;
 				width: 5px;
 				height: 7px;
@@ -183,7 +183,7 @@ header {
 		// Style submit button as icon
 		button {
 			text-indent: -9999px;
-			background: url(../../img/header-sprites.png);
+			background: url(../../img/header/header-sprites.png);
 			background-position: 0 -72px;
 			width: 22px;
 			height: 22px;
@@ -207,7 +207,7 @@ header {
 		.border-radius(3px);
 		i {
 			text-indent: -9999px;
-			background-image: url(../../img/header-sprites.png);
+			background-image: url(../../img/header/header-sprites.png);
 			background-position: 0 -214px;
 			height: 20px;
 			width: 20px;
