--- a/assets/less/global/lib/scaffolding.less
+++ b/assets/less/global/lib/scaffolding.less
@@ -16,7 +16,7 @@ body {
 }
 
 .page {
-	background-image: url(../../img/page-bg-noise.png);
+	background-image: url(../../img/global/page-bg-noise.png);
 	background-repeat: repeat-x;
 	margin-top: -40px;
 	padding-top: 50px;
