--- a/assets/css/areas/result-set.css
+++ b/assets/css/areas/result-set.css
@@ -1,1 +1,330 @@
-.result-set .page-header{margin:0 0 20px 20px;padding:0;border:0;line-height:24px}.text-ad{text-align:right}.text-ad a{color:#78ab7d;border-bottom:1px solid #78ab7d;line-height:36px;margin-right:17px}.text-ad a:hover{color:#628c66;text-decoration:none;border-bottom:1px solid #628c66}.text-ad a:after{content:url('../../img/text-ad-arrow.png');position:absolute;margin-left:10px;margin-top:2px}.refinements-bar{width:100%;height:75px;background-color:#fff;border:1px solid #ccc;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px}.refinements-bar .label{color:#999;background-color:transparent;font-size:11px;margin-right:15px}.refinements-bar .back-btn{float:left;padding:0 15px;font-family:"NeueBoldCondensed","Helvetica Neue",sans-serif;text-align:center}.refinements-bar .back-btn span{height:50px;width:24px;display:block;background-image:url(../../img/refinement-back-arrow.png);background-repeat:no-repeat;background-position:center center;text-indent:-9999px}.refinements-bar .results-qty{color:#fff;background-color:#333;font-size:12px;text-align:center;height:75px;padding:0 15px;float:left;font-family:"NeueBoldCondensed","Helvetica Neue",sans-serif;text-transform:uppercase}.refinements-bar .results-qty span{height:50px;font-size:36px;line-height:50px;display:block}.refinements-bar .filters li{float:left}@media(min-width:980px){.refinements-bar-fixed{position:fixed;top:0;left:0;right:0;z-index:1030;border:0;border-width:0 0 1px;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;-webkit-box-shadow:0 1px 8px rgba(0,0,0,0.3);-moz-box-shadow:0 1px 8px rgba(0,0,0,0.3);box-shadow:0 1px 8px rgba(0,0,0,0.3)}.refinements-bar-fixed .refinements{width:938px;margin:0 auto;padding:0 1px;border-left:1px solid #e5e5e5;border-right:1px solid #e5e5e5;*zoom:1}.refinements-bar-fixed .refinements:before,.refinements-bar-fixed .refinements:after{display:table;content:""}.refinements-bar-fixed .refinements:after{clear:both}}
+.result-set .page-header {
+  margin: 0 0 20px 20px;
+  padding: 0;
+  border: 0;
+  line-height: 24px;
+}
+.text-ad {
+  text-align: right;
+}
+.text-ad a {
+  color: #78ab7d;
+  border-bottom: 1px solid #78ab7d;
+  line-height: 36px;
+  margin-right: 17px;
+}
+.text-ad a:hover {
+  color: #628c66;
+  text-decoration: none;
+  border-bottom: 1px solid #628c66;
+}
+.text-ad a:after {
+  content: url('../../img/global/text-ad-arrow.png');
+  position: absolute;
+  margin-left: 10px;
+  margin-top: 2px;
+}
+.refinements-placeholder {
+  height: 75px;
+  margin-bottom: 30px;
+}
+/* Bar Container */
+.refinements-bar {
+  width: 100%;
+  height: 75px;
+  background-color: #ffffff;
+  /* Old browsers */
+
+  border: 1px solid #cccccc;
+  position: relative;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+/* Refinements */
+.refinements .label {
+  color: #999;
+  background-color: transparent;
+  font-size: 11px;
+  line-height: 11px;
+  display: inline-block;
+  margin-top: 15px;
+  padding: 0;
+  *zoom: 1;
+}
+.refinements .label:before,
+.refinements .label:after {
+  display: table;
+  content: "";
+}
+.refinements .label:after {
+  clear: both;
+}
+.refinements .pull-right .label {
+  margin-right: 15px;
+  float: left;
+}
+.refinements .back-btn {
+  float: left;
+  padding: 0 15px;
+  height: 75px;
+  font-family: "NeueBoldCondensed", "Helvetica Neue", sans-serif;
+  text-align: center;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.refinements .back-btn span {
+  height: 35px;
+  width: 24px;
+  margin-top: 15px;
+  display: block;
+  background: url(../../img/result-set/refinements-back-arrow.png) -26px 0px no-repeat;
+  text-indent: -9999px;
+}
+.refinements .back-btn:hover {
+  background-color: #fafafa;
+}
+.refinements .back-btn:hover span {
+  background: url(../../img/result-set/refinements-back-arrow.png) 0px 0px no-repeat;
+}
+.refinements .results-qty {
+  color: #ffffff;
+  background-color: #333333;
+  font-size: 12px;
+  text-align: center;
+  height: 75px;
+  padding: 0 15px;
+  float: left;
+  font-family: "NeueBoldCondensed", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+}
+.refinements .results-qty span {
+  height: 50px;
+  font-size: 36px;
+  line-height: 50px;
+  display: block;
+}
+/* Price Range Slider (jquery UI) */
+.price-range {
+  float: left;
+  margin-left: 30px;
+}
+.price-range .label {
+  margin-top: 15px;
+}
+.price-range #amount {
+  font-size: 13px;
+  line-height: 11px;
+  font-weight: bold;
+  color: #086daf;
+  vertical-align: inherit;
+}
+.price-range #amount span {
+  font-weight: normal;
+  color: #333333;
+  text-transform: none;
+}
+.price-range .ui-slider {
+  position: relative;
+  text-align: left;
+  height: 10px;
+  width: 160px;
+  margin-top: 10px;
+  background: #e5e5e5;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.price-range .ui-slider a {
+  position: absolute;
+  z-index: 2;
+  cursor: pointer;
+  background: red;
+  top: -0.3em;
+  margin-left: -0.6em;
+  outline: none;
+  background: url(../../img/result-set/price-range-handles.png) 0px 0px no-repeat;
+  display: block;
+  width: 17px;
+  height: 19px;
+}
+.price-range .ui-slider a:last-child {
+  background-position: -19px 0px;
+}
+.price-range .ui-slider .ui-slider-range {
+  position: absolute;
+  z-index: 1;
+  font-size: .7em;
+  display: block;
+  border: 0;
+  background: #333;
+  top: 0;
+  height: 100%;
+}
+.ui-slider-range-min {
+  left: 0;
+}
+.ui-slider-range-max {
+  right: 0;
+}
+.ui-state-disabled {
+  cursor: default !important;
+}
+ul.filters {
+  margin-bottom: 0;
+  margin-left: 0;
+  float: right;
+}
+ul.filters li {
+  float: left;
+  font-family: "NeueBoldCondensed", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  list-style: none;
+  border-left: 1px solid #e5e5e5;
+  height: 75px;
+}
+ul.filters li:hover {
+  background-color: #fafafa;
+}
+ul.filters li:last-child {
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
+}
+ul.filters li span {
+  height: 50px;
+  width: 24px;
+  display: block;
+  text-indent: -9999px;
+}
+ul.filters li a {
+  cursor: default;
+  padding: 0 15px;
+  display: block;
+  color: #333333;
+}
+ul.filters li a:hover {
+  text-decoration: none;
+}
+#filters .refinements-selections {
+  position: absolute;
+  background: #fafafa;
+  top: 76px;
+  width: 980px;
+  left: -20px;
+  border: 1px solid #ccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+#filters .refinements-selections .tab-content {
+  padding: 20px;
+  width: 940px;
+}
+/* Selections container */
+/*
+.refinements-menu {
+	background: #fafafa;
+	padding: 20px;
+	width: 940px;
+	position: relative;
+	left: -20px;
+	top: -1px;
+	border: 1px solid #ccc;
+	.border-radius(3px);
+}
+*/
+@media (min-width: 980px) {
+  .refinements-bar-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1030;
+    border: 0;
+    border-width: 0 0 1px;
+    /* drop the border on the fixed edges */
+  
+    padding-left: 1px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
+  }
+  .refinements-bar-fixed .refinements {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 1px;
+    border-left: 1px solid #e5e5e5;
+    border-right: 1px solid #e5e5e5;
+    left: 1px;
+    *zoom: 1;
+  }
+  .refinements-bar-fixed .refinements:before,
+  .refinements-bar-fixed .refinements:after {
+    display: table;
+    content: "";
+  }
+  .refinements-bar-fixed .refinements:after {
+    clear: both;
+  }
+  .refinements-bar-fixed .refinements .refinements-selections {
+    position: absolute;
+    background: red;
+    top: 76px;
+    width: 100% !important;
+    left: 0 !important;
+    border: 0 !important;
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  }
+  .refinements-bar-fixed .refinements .refinements-selections .tab-content {
+    margin: 0 auto;
+  }
+}
+.sort {
+  margin-bottom: 20px;
+}
+.sort span {
+  color: #999999;
+  text-shadow: 0 1px 0 #ffffff;
+  line-height: 34px;
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: bold;
+  float: left;
+  margin-right: 20px;
+}
+.sort .btn-group {
+  float: left;
+  margin-right: 30px;
+  margin-top: 3px;
+}
+.sort .btn-group button {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 12px;
+}
+.sort .btn-group button.active {
+  color: #000000;
+}
+.result-set .pagination {
+  background: #ffffff;
+  margin: 0;
+}
+.result-set .pagination a {
+  border-top-color: #ccc;
+  border-bottom-color: #ccc;
+  border-left-color: #ddd;
+  border-right-color: #ddd;
+}
+.result-set .pagination li:first-child a {
+  border-left-color: #ccc;
+}
+.result-set .pagination li:last-child a {
+  border-right-color: #ccc;
+}
