--- a/assets/less/global/lib/patterns.less
+++ b/assets/less/global/lib/patterns.less
@@ -20,7 +20,7 @@ div:nth-last-child(1) {
 		font-size: 10px;
 		width: 100%;
 		display: block;
-		background-image: url(../../img/section-div.png);
+		background-image: url(../../img/global/section-div.png);
 		background-repeat: repeat-x;
 		background-position-y: 50%;
 		text-shadow: 0 1px 0 @white;
