--- a/assets/less/global/navigation.less
+++ b/assets/less/global/navigation.less
@@ -46,7 +46,7 @@
 					width: 25px;
 					height: 25px;
 					margin-top: -5px;
-					background-image: url(../../img/nav-sprites.png);
+					background-image: url(../../img/nav/nav-sprites.png);
 				}
 			}
 		}
