--- a/assets/less/areas/result-set.less
+++ b/assets/less/areas/result-set.less
@@ -207,10 +207,17 @@ ul.filters {
 		text-transform: uppercase;
 		text-align: center;
 		list-style: none;
-		border-left: 1px solid #e5e5e5;
+		border-left: 1px solid #ccc;
 		height: 75px;
-		&:hover {
+		&.active {
 		background-color: #fafafa;
+		position: relative;
+		height: 75px;
+		z-index: 99999;
+		border-bottom: 1px solid #FAFAFA;
+		a {
+			padding-right: 15px;
+		}
   	}
   	// add border-radius on the last filter, so background on hover doesn't bleed
   	&:last-child {
@@ -234,24 +241,39 @@ ul.filters {
   	}
 	  }
 }
-   
 #filters {
-	.refinements-selections {  
+	.refinements-selections {
+		display: none;  
 		position: absolute;
+		z-index: 1000;
 		background: #fafafa;
 		top: 76px;
 		width: 980px;
 		left: -20px;
+		top: 75px;
 		border: 1px solid #ccc;
 		.border-radius(3px);
+		.box-shadow(0 4px 8px rgba(0,0,0,0.3);
 		.tab-content {
-			padding: 20px;
+			padding: 10px 20px 20px;
 			width: 940px;
+			h3 {
+				margin-bottom: 10px;
+			}
+			.row {
+				clear: both;
+			}
+			.reset {
+				text-transform: uppercase;
+				font-weight: bold;
+				font-size: 10px;
+				line-height: 27px;
+				i {
+					background-image: url(../../img/result-set/refinements-selections-reset.png);
+					margin-left: 5px;
+				}
+			}
 		}
-	}
-	// Hide tabs
-	.ui-tabs-hide { 
-		 
 	}
 }
 
@@ -272,7 +294,6 @@ ul.filters {
 }
 */
 
-
 // Refinements (FULL WIDTH, FIXED) but only for 980px and up
 // -------------------------
 
@@ -292,8 +313,8 @@ ul.filters {
 		width: 940px;
 		margin: 0 auto;
 		padding: 0 1px;
-		border-left: 1px solid #e5e5e5;
-		border-right: 1px solid #e5e5e5;
+		border-left: 1px solid #ccc;
+		border-right: 1px solid #ccc;
 		left: 1px;
 		.clearfix();
 		.refinements-selections {  
@@ -302,7 +323,8 @@ ul.filters {
 			top: 76px;
 			width: 100% !important;
 			left: 0 !important;
-			border: 0 !important;
+			border: 0;
+			border-top: 1px solid #ccc;
 			.box-shadow(0 3px 6px rgba(0,0,0,.2);
 			.tab-content {
 				margin: 0 auto;
@@ -312,15 +334,21 @@ ul.filters {
   }
 }
 
-
-
+.refinements-selections .checkbox {
+	padding: 6px 10px 6px 25px;
+	color: #555;
+	background-color: #f2f2f2;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	cursor: pointer;
+}
 
 // SORTING
 // --------------------------------------------------
 .sort {
 	margin-bottom: 20px;
 }
-
 .sort span {
 	color: @grayLight;
 	text-shadow: 0 1px 0 @white;
@@ -331,12 +359,11 @@ ul.filters {
 	float: left;
 	margin-right: 20px;
 }
-
 .sort .btn-group {
 	float: left;
 	margin-right: 30px;
 	margin-top: 3px;
-	button {
+	.btn {
 		font-family: @baseFontFamily;
 		font-size: 12px;
 		&.active {
@@ -344,7 +371,20 @@ ul.filters {
 		}
 	}
 }
+// View by (sprites)
+// -------------------------
+.sort i {
+  width: 15px;
+  height: 15px;
+  background-image: url(../../img/result-set/result-set-view.png);
+}
+// btn sprites
+.icon-rset-grid  { background-position: -32px 0px; }
+.icon-rset-list  { background-position: -17px -17px; }
+.icon-rset-compare  { background-position: 0 0; }
 
+// Pagination
+// -------------------------
 .result-set .pagination {
 	background: @white;
 	margin: 0;
@@ -359,5 +399,119 @@ ul.filters {
 	}
 	li:last-child a {
 		border-right-color: #ccc;
+	}
+}
+
+// RESULTS
+// --------------------------------------------------
+
+// Thumb view
+// -------------------------
+.thumb-view {
+	.result {
+		background: @white;
+		.border-radius(3px);
+		border: 1px solid #e5e5e5;
+		width: 218px;
+		margin-bottom: 20px;
+		.quick-view {
+			position: absolute;
+			top: -1px;
+			right: -1px;
+			
+			padding-top: 6px;
+			padding-bottom: 6px;
+			.border-radius(0 3px 0 0);
+			text-transform: uppercase;
+			font-size: 10px;
+			font-weight: bold;
+			-webkit-transition-duration: 200ms;
+			opacity: 0;
+			i {
+				background-image: url('../../img/result-set/quick-view-icon.png');
+				width: 13px;
+				height: 14px;
+				margin-right: 5px;
+			}
+		}
+		&:hover {
+			border-color: #ccc;
+			.box-shadow(0 0 5px rgba(0,0,0,0.05);
+			.product-thumb {
+				.quick-view {
+					opacity: 1;
+				}
+			}
+		}
+		.product-thumb {
+			padding: 30px 20px 20px;
+			border-bottom: 1px solid #e5e5e5;
+			position: relative;
+		}
+		.product-details {
+			padding: 20px;
+			h3 {
+				font-size: 16px;
+			}
+			h4 {
+				font-size: 11px;
+				line-height: 11px;
+				margin-bottom: 20px;
+				text-transform: uppercase;
+				font-weight: normal;
+				color: #404040;
+			}
+			.price {
+				font-weight: bold;
+				font-style: italic;
+				font-size: 14px;
+			}
+			.rating {
+				background-image: url('../../img/result-set/ratings.png');
+				width: 64px;
+				height: 12px;
+				margin-top: 2px;
+				.stars {
+					background-image: url('../../img/result-set/ratings.png');
+					background-position: 0 -14px;
+					background-repeat: no-repeat;
+					display: block;
+					height: 12px;
+					&.one-star { width: 12px; }
+					&.two-stars { width: 26px; }
+					&.three-stars { width: 40px; }
+					&.four-stars { width: 52px; }
+					&.five-stars { width: 64px; }
+				}
+			}
+		}
+	}
+}
+
+.badge {
+	text-transform: uppercase;
+	position: absolute;
+	font-size: 10px;
+	font-weight: bold;
+	top: 6px;
+	left: 10px;
+	i {
+		background-image: url(../../img/result-set/result-set-badges.png);
+		background-repeat: no-repeat;
+  		margin-right: 7px;
+	}
+	&.toprated i { 
+		background-position: -34px 0;
+		width: 15px;
+		height: 14px;
+		position: relative;
+		top: -2px;
+	}
+	&.bestseller i { 
+		background-position: 0 0;
+		width: 12px;
+		height: 18px;
+		position: relative;
+		top: -2px;
 	}
 }
