--- a/assets/less/global/footer.less
+++ b/assets/less/global/footer.less
@@ -163,7 +163,7 @@ footer .social {
 		margin-right: 10px;
 		padding-left: 10px;
 		font-size: 12px;
-		line-height: 0;
+		line-height: 13px;
 		&::-webkit-input-placeholder {
   			color: #b2b2b2;
   			font-style: italic;
