--- a/assets/less/global/header.less
+++ b/assets/less/global/header.less
@@ -162,7 +162,7 @@ header {
 			height: 25px;
 			font-size: 14px;
 			padding-left: 10px;
-			line-height: 0;
+			line-height: 25px;
 			margin-bottom: 0;
 			border: 1px solid #b2b2b2;
 			.box-shadow(inset 0 1px 4px rgba(0,0,0,.2));
