--- a/assets/less/areas/result-set.less
+++ b/assets/less/areas/result-set.less
@@ -210,13 +210,14 @@ ul.filters {
 		border-left: 1px solid #ccc;
 		height: 75px;
 		&.active {
-		background-color: #fafafa;
+		background-color: #333;
 		position: relative;
 		height: 75px;
 		z-index: 99999;
-		border-bottom: 1px solid #FAFAFA;
+		border-bottom: 1px solid #333;
 		a {
 			padding-right: 15px;
+			color: @white;
 		}
   	}
   	// add border-radius on the last filter, so background on hover doesn't bleed
@@ -246,12 +247,11 @@ ul.filters {
 		display: none;  
 		position: absolute;
 		z-index: 1000;
-		background: #fafafa;
+		background: #333;
 		top: 76px;
 		width: 980px;
 		left: -20px;
 		top: 75px;
-		border: 1px solid #ccc;
 		.border-radius(3px);
 		.box-shadow(0 4px 8px rgba(0,0,0,0.3);
 		.tab-content {
@@ -259,6 +259,7 @@ ul.filters {
 			width: 940px;
 			h3 {
 				margin-bottom: 10px;
+				color: @white;
 			}
 			.row {
 				clear: both;
@@ -312,7 +313,7 @@ ul.filters {
     .refinements {
 		width: 940px;
 		margin: 0 auto;
-		padding: 0 1px;
+		//padding: 0 1px;
 		border-left: 1px solid #ccc;
 		border-right: 1px solid #ccc;
 		left: 1px;
@@ -324,7 +325,6 @@ ul.filters {
 			width: 100% !important;
 			left: 0 !important;
 			border: 0;
-			border-top: 1px solid #ccc;
 			.box-shadow(0 3px 6px rgba(0,0,0,.2);
 			.tab-content {
 				margin: 0 auto;
@@ -336,8 +336,8 @@ ul.filters {
 
 .refinements-selections .checkbox {
 	padding: 6px 10px 6px 25px;
-	color: #555;
-	background-color: #f2f2f2;
+	color: #fafafa;
+	background-color: #222;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
